Forgot to include figure files

--- a/eht-bh-fact-sheet.tex
+++ b/eht-bh-fact-sheet.tex
@@ -39,7 +39,7 @@
       Angles can be measured in radians ($2\pi$ around a circle), or
       arcseconds (1/3600$^{\text{th}}$ of a degree)
       \begin{align*}
-        1 \text{ rad} \approx 206265 \text{ arcsec}
+        1 \text{ rad} \approx 206\,265 \text{ arcsec}
       \end{align*}
 
     }
@@ -87,8 +87,9 @@
       BH is ``sucking'') until it gets to about $R_{\text{ISCO}}$, and
       then plunges toward and through the event horizon. This
       matter gets hotter and brighter as it gets closer in; most of
-      the emission comes from near $R_{\text{ISCO}}$. The time for
-      matter to orbit at $R_{\text{ISCO}}$ sets a characteristic time for imaging.
+      the emission comes from near $R_{\text{ISCO}}$.
+      % The time for matter to orbit at $R_{\text{ISCO}}$ sets a
+      % characteristic time for imaging.
 
       Even though most of the light is emitted near $R_{\text{ISCO}}$,
       light rays can skim the photon orbit and come back out; they
@@ -106,7 +107,7 @@
       Credit: Event Horizon Telescope Collaboration
       \vspace{.3em}
       \begin{center}
-        \includegraphics[width=20em, trim={20cm 20cm 20cm 20cm}, clip]{m87a-img-square}
+        \includegraphics[width=20em, trim={10cm 10cm 10cm 10cm}, clip]{m87a-img-square}
 
         \vspace{1em}
 
@@ -135,7 +136,7 @@
       least) a few times smaller than the BH’s shadow angle
       $\theta_{s}$.
 
-      If you use $\lambda=1.3$mm radio waves, and make the whole Earth
+      If you use $\lambda=1.3$ mm radio waves, and make the whole Earth
       your telescope, $D_{\text{tel}} \approx 1.3\cdot 10^{4}$ km,
       your limit will be
       \begin{align*}
@@ -169,7 +170,7 @@
         M87 A* is the SMBH in the galaxy M87, which is in the Virgo
         cluster. It is roughly a thousand times more massive and thus
         bigger than Sgr A*. However it is also roughly a thousand
-        times farther away, so it is roughly the same angle on the
+        times farther away, so it is about the same angle on the
         sky.
         \begin{align*}
           M_{\text{M87 A*}} &\approx 6.5\cdot10^9 M_\odot \approx 10^{10}\text{ km}
@@ -180,7 +181,7 @@
           \frac{10 M_{\text{M87 A*}}}{D_{\text{M87 A*}}}
           \approx 2.4\cdot10^{-10} \text{rad} \approx 40 \, \mu\text{arcsec}
         \end{align*}
-        This is barely a bit bigger than $\theta_{\text{res}}$ for the
+        This is barely bigger than $\theta_{\text{res}}$ for the
         Earth at 1.3 mm wavelength.
       }
     }
